<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#520a05"
    tools:context=".CustomerManagement">

    <TextView
        android:id="@+id/CurrentClients"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/currentClients"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="casual"
        android:text="@string/cus_man"
        android:textAlignment="center"
        android:textColor="#eded1a"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="79dp" />

    <Button
        android:id="@+id/currentClients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="47dp"
        android:text="@string/current_clients" />

    <Button
        android:id="@+id/button8"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="45dp"
        android:text="@string/potential_clients" />

    <Button
        android:id="@+id/button9"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="190dp"
        android:text="@string/past_clients" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_above="@+id/CurrentClients"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="26dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

</RelativeLayout>