<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#520a05"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/CurrentClients"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/customerManagement"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="73dp"
        android:fontFamily="casual"
        android:text="@string/pe_aranda_s_catering_services"
        android:textAlignment="center"
        android:textColor="#eded1a"
        android:textSize="25sp" />

    <Button
        android:id="@+id/customerManagement"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="35dp"
        android:text="@string/customer_management"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="161dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="35dp"
        android:text="@string/item_and_equipment_management"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="252dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="190dp"
        android:text="@string/list_of_customers"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="353dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_above="@+id/CurrentClients"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="26dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

</RelativeLayout>